--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,7 @@
   "semi": true,
   "singleQuote": false,
   "trailingComma": "es5",
+  "plugins": ["prettier-plugin-sh"],
   "overrides": [
     {
       "files": "*.json",
@@ -23,6 +24,19 @@
       "files": "*.{yaml,yml}",
       "options": {
         "singleQuote": true
+      }
+    },
+    {
+      "files": "*.sh",
+      "options": {
+        "parser": "sh",
+        "indent": 2,
+        "binaryNextLine": true,
+        "switchCaseIndent": true,
+        "spaceRedirects": true,
+        "keepPadding": false,
+        "minify": false,
+        "functionNextLine": false
       }
     }
   ]
